# magicrails

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  docs.yml  release.yml
actions/: index.html
adapters/anthropic/: index.html
adapters/langchain/: index.html
adapters/openai/: index.html
assets/: runaway_agent.cast
changelog/: index.html
docs/: actions.md  changelog.md  faq.md  getting-started.md  index.md  pricing.md
docs/adapters/: anthropic.md  langchain.md  openai.md
docs/guards/: budget.md  repeat.md  stasis.md
examples/: basic.py  budget_demo.py  repeat_loop_demo.py  runaway_agent.py
faq/: index.html
getting-started/: index.html
guards/budget/: index.html
guards/repeat/: index.html
guards/stasis/: index.html
magicrails/: __init__.py  _session.py  actions.py  detectors.py  events.py  exceptions.py  guard.py  models.json  pricing.py
magicrails/adapters/: __init__.py  anthropic.py  langchain.py  langgraph.py  openai.py
pricing/: index.html
search/: search_index.json
tests/: test_adapter_langchain.py  test_detectors.py  test_pricing.py  test_session.py
