[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magicrails"
version = "0.1.0"
description = "An emergency brake for AI agents — budget caps, loop detection, and state-stasis guards in three lines of code."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Magicrails contributors"}]
keywords = ["agents", "llm", "safety", "observability", "cost", "ai", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/magicrails/magicrails"
Issues = "https://github.com/magicrails/magicrails/issues"

[tool.hatch.build.targets.wheel]
packages = ["magicrails"]

[tool.hatch.build.targets.wheel.force-include]
"magicrails/models.json" = "magicrails/models.json"
